# agent-workbench

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGE_LOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.codex/: config.toml  hooks.json
docs/: conf.py  index.rst
model_profiles/: README.md  gpt-oss-family-planned.md  pricing_catalog.json  qwen3-coder-next.md  qwen3-coder.md
planning/: adr_0001_workbench_surface.md  adr_0002_interface_direction.md  agent_workbench_project_history.md  authority_hierarchy_and_subagent_direction.md  coordinator_advisor_paid_boost_strategy.md  delegation_economics_vision.md  delegation_policy.md  delegation_transport_names.md  document_library_index_workflow_direction.md  freshforge_graph_dependency_opinion.md  honeycomb_single_level_delegation.md  iteration_reasoning_and_convergence.md  native_codex_remote_ollama_findings.md  notes-gp-20260704-raw.md  notes.md  ollama_worker_model_install_shortlist.md  open_exploration_sandbox.md  p107_2_ab_research_objective_and_coordination_protocol.md  p107_2_ollama_apply_patch_compatibility.md  p107_agent_hub_economics_reset.md  p107_c0_repaired_block_plan.md  p107_c4_depth1_ollama_model_sequence.md  p107_c4_package_route_reentry_packet.md  p107_economics_research_program.md  p107_first_matched_workload.md  p107_substantial_workload_capability_plan.md  p107_workflow_package_v2.md  p109_2012_cycle_extraction.md  p114_2_offline_bridge_conformance.md  p114_3_scripted_host_proof_stop.md  p114_agent_bridge_tool_matrix.md  p114_c0_c2_invoked_capability_inventory.md  p114_c2_worker_capability_inventory.md  p114_c4_capability_parity_preregistration.md  p114_c4_reentry_closeout_plan.md  p114_c4_role_binding_probe.md  p114_c4_vs_code_mcp_next_plan.md  p114_fresh_capability_battery.md  p114_mwe_build_plan.md  p114_p113_mwe_increment_log.md  (+171 more)
playbooks/: cli_workflow.md  deployment_environment_operator.md  document_extraction_toc_first.md  document_indexing_recipe.md  evidence_store.md  native_recursive_codex_ui.md  p118_single_model_operator_checklist.md  (+2 more)
(+646 files in other folders)
