[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench"
version = "0.1.0"
description = "Local supervisor tooling for Agent Workbench workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "UBC-FRESH" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "PyYAML>=6",
  "pypdf>=5"
]

[project.optional-dependencies]
graph = ["freshforge>=0.1.0a5"]

[project.scripts]
agent-workbench = "agent_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
