[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-workbench"
version = "0.1.0"
description = "Local supervisor tooling for Agent Workbench workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "UBC-FRESH" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "PyYAML>=6",
  "pypdf>=5"
]

[project.optional-dependencies]
graph = ["freshforge>=0.1.0a5"]
dev = [
  "github-copilot-sdk>=1.0.5",
  "mypy>=2.2",
  "pre-commit>=4.6",
  "pytest>=9.1",
  "ruff>=0.15",
  "types-PyYAML>=6.0"
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "myst-parser>=3.0",
  "linkify-it-py>=2.0",
]

[project.scripts]
agent-workbench = "agent_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.mypy.overrides]]
module = ["freshforge.validation"]
ignore_missing_imports = true
